# miscalg

./: .gitignore  README.md  casemod.py
bound_calc/: bound_calc.py
cache_friendly/jcache1/: build.xml
cache_friendly/jcache1/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
cache_friendly/jcache1/src/jcache1/: CNode.java  CRect.java  JCacheGen.java  JCacheMain.java
cache_friendly/jcache1/src/jcache1/parsing/: CNodeParser.java  CNodeTokens.java
calc-r/: Cargo.toml
calc-r/src/: main.rs
cmake_gensrc/: gen_src.py
dep-model-update/: Cargo.toml
dep-model-update/src/: lib.rs
dlang/: experiments.d  recusion_bug.d
dlang/dep-model/: .editorconfig  .gitignore  dub.json  reformat.sh
dlang/dep-model/source/: app.d  eval_graph.d  graph.d
dlangandc/dchello/: .gitignore  dub.json  meson.build
dlangandc/dchello/myclib/: CMakeLists.txt  hello.c
dlangandc/dchello/source/: app.d  mymsg.d
dlangandc/dchello/subprojects/myclib/: hello.c  hello.h
find_dup/: find-dup.raku  find_dup.d  find_dup_lists.d
find_dup/find_dup_lists_ocaml/: dune-project  find_dup_lists_ocaml.opam
find_dup/find_dup_lists_ocaml/lib/: dune  lib.ml  lib.mli
find_dup/find_dup_lists_ocaml/test/: dune
find_dup/find_dup_pas/: find_dup_pas.lpi  find_dup_pas.lpr
find_dup/find_dup_r/: Cargo.toml
find_dup/find_dup_r/src/: main.rs
lockfreej/LockFreeJ/: build.xml
lockfreej/LockFreeJ/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
lockfreej/LockFreeJ/src/lockfreej/: Consumer.java  LockFreeJ.java  LockFreeQueue.java  LockedQueue.java  MyQueue.java  MyWork.java
mpvfftool/mpvcmd/: Cargo.toml  README
mpvfftool/vidcliptui/: Cargo.toml  README.asciidoc
nodecalc/: Cargo.toml
nodecalc/src/: lib.rs  main.rs
ocaml/: tsorta.ml
ocaml-clib/: dune-project  ocaml-clib.opam
ocaml-clib/clib/: clib.c  meson.build
ocaml-clib/clib/myclib/: myclib.h
ocaml-clib/foreign/: dune  dune-dynamic-libso  function_description.ml  stubs.c  type_description.ml
ocaml-clib/foreign/clib/: clib.c  meson.build
ocaml-clib/foreign/clib/myclib/: myclib.c
ocaml-clib/lib/: dune  ocaml_clib_aux.ml
ocaml-clib/test/: dune
ocaml/dep-model/: dep-model.opam  dune-project
ocaml/dep-model/lib/: dune  graph.ml
ocaml/dep-model/test/: dune  test_dep_model.ml
ocaml/ocamlmisc/: dune-project  ocamlmisc.opam
ocaml/ocamlmisc/lib/: dune  tsorta.ml
ocaml/ocamlmisc/test/: dune
parse_envs/: parse_envs.py
paths-to-links/: Cargo.toml
paths-to-links/src/: lib.rs
petgraph-exp/: Cargo.toml
petgraph-exp/src/: main.rs
react-calc/: recalc.d
rustandc/hellolib/: CMakeLists.txt  hello.c
rustandc/printlib/: myprint.c
rustandc/rustapp/: Cargo.toml  build.rs
rustandc/rustapp2/: Cargo.toml  build.rs
rustandc/rustapp2/hellolib/: CMakeLists.txt
rustandc/rustapp2/printlib/: CMakeLists.txt  myprint.c  myprint.h
rustandc/rustapp2/src/: main.rs
sdlexperiments/glversion/: CMakeLists.txt  main.c
sdlexperiments/glversion/glad/include/glad/: glad.h
sdlexperiments/glversion/glad/src/: glad.c
sdlexperiments/sdl3withrust/hello/: CMakeLists.txt  README  hello.c
sdlexperiments/sdl3withrust/hello/myrustlib/: Cargo.toml
sdlexperiments/sdl3withrust/hello/myrustlib/src/: lib.rs
sdlexperiments/sdl3withrust/hellocfromrust/: README
sdlffc/: .clangd  .editorconfig  README.org  mailbox.c  mailbox.h  meson.build  sdlffc.c  sdlffclib.c  sdlffclib.h  sdlffclib_private.h
vclipff/: README.org
vcut/: meson.build  readme.md  resources.xml  vcut.vala  vcut_exec.vala  vcut_gui.glade  vcutc.c  vcutc.h  vcutc.vapi
