[package]
name = "paths-to-links"
version = "0.1.0"
edition = "2021"
description = "Creates a temp dir, generates symbolic links to files in the list, and runs a user program with new path."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ['derive'] }
